angular form valid

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Bookstore</title>
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/ng-grid.css">
+  <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/index.css">
   <script src="libs/angular.js"></script>
   <script src="libs/angular-ui-router.js"></script>
